--- a/style.css
+++ b/style.css
@@ -176,13 +176,9 @@ span{
 }
 
 .contact {
+    padding-top: 100px;
     background: var(--second-bg-color);
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 10%;
-
+    height: auto;
 }
 
 .contact-content {
@@ -236,11 +232,9 @@ span{
 }
 
 .skills {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 10%;
+    padding-top: 100px;
+    background: var(--second-bg-color);
+    height: auto;
 }
 
 .skills-content {
@@ -309,5 +303,79 @@ span{
 
     .skills-icons {
         gap: 1rem;
+    }
+}
+
+.experiences {
+    padding-top: 100px;
+    background: var(--second-bg-color);
+    height: auto;
+}
+
+.experiences-content {
+    max-width: 800px;
+    margin: auto;
+    text-align: left;
+}
+
+.experiences h2 {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 3em;
+    color: #ffffff;
+}
+
+.experiences-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    margin-bottom: 20px;
+}
+
+.experience-item {
+    overflow: hidden;
+    background-color: #fff;
+    padding: 25px;
+    margin-bottom: 25px;
+    border-left: 5px solid var(--main-color);
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
+
+.experience-item h3 {
+    margin-top: 0;
+    font-size: 1.8em;
+    color: var(--main-color);
+}
+
+.experience-item span {
+    font-style: italic;
+    font-size: 1.4em;
+    color: #666;
+}
+
+.experience-item p {
+    text-indent: 20px;
+    line-height: 1.8;
+    font-size: 1.4em;
+    color: #666;
+}
+
+.experience-item p::before {
+    content: '·';
+    font-size: 1.5em;
+    vertical-align: middle;
+    margin-right: 0.5em;
+}
+
+.company-logo {
+    max-width: 100px;
+    height: auto;
+    margin-right: 10px;
+    float: left;
+}
+
+@media (max-width: 768px) {
+    .experiences-grid {
+        grid-template-columns: 1fr;
     }
 }
