--- a/style.css
+++ b/style.css
@@ -123,7 +123,9 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0 10%;
+    padding-top: 100px;
+    background: var(--second-bg-color);
+    height: auto;
 }
 
 .home-content {
