--- a/style.css
+++ b/style.css
@@ -427,3 +427,79 @@ span{
         grid-template-columns: 1fr;
     }
 }
+
+
+.projects {
+    padding-top: 100px;
+    background: var(--second-bg-color);
+    height: auto;
+}
+
+.projects-content {
+    max-width: 800px;
+    margin: auto;
+    text-align: left;
+}
+
+.projects h2 {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 3em;
+    color: #ffffff;
+}
+
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    margin-bottom: 20px;
+}
+
+.project-item {
+    overflow: hidden;
+    background-color: #fff;
+    padding: 25px;
+    margin-bottom: 25px;
+    border-left: 5px solid var(--main-color);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.project-item h3 {
+    margin-top: 0;
+    font-size: 1.8em;
+    color: var(--main-color);
+}
+
+.project-item span {
+    font-style: italic;
+    font-size: 1.4em;
+    color: #666;
+}
+
+.project-item p {
+    text-indent: 20px;
+    line-height: 1.8;
+    font-size: 1.4em;
+    color: #666;
+}
+
+.project-item p::before {
+    content: '·';
+    font-size: 1.5em;
+    vertical-align: middle;
+    margin-right: 0.5em;
+}
+
+.company-logo {
+    max-width: 100px;
+    height: auto;
+    margin-right: 10px;
+    float: left;
+}
+
+@media (max-width: 768px) {
+    .projects-grid {
+        grid-template-columns: 1fr;
+    }
+}
+
